Fix: title no longer overlaps with error messages, if any. (#192)
* Fix export error

* Bring error over title pane

* Revert "Fix export error"

This reverts commit 13d964ca7b2a653726ae12519116b4ae3d5df9ea.

* Fix newly added layers overlap with title

* Update content.js

--- a/ide/static/css/style.css
+++ b/ide/static/css/style.css
@@ -530,7 +530,7 @@ input#netName.hidden {
     color: white;
     background-color: #f44336;
     border: none;
-    z-index: 22;
+    z-index: 120;
     position: absolute;
     top: 3%;
     left:30%;
